Fix issue where collapsable are not fully exposed

--- a/app/resources/style/event.scss
+++ b/app/resources/style/event.scss
@@ -116,7 +116,7 @@
     visibility: visible;
     opacity: 1;
     @include transition(all 0.2s);
-    max-height: 400px;
+    max-height: 100vh;
   }
 
   #event-container > .collapse {
